[gd_scene load_steps=3 format=3 uid="uid://dfwop73gf4uk8"]

[ext_resource type="Script" path="res://poster.gd" id="1_6wd3v"]
[ext_resource type="Texture2D" uid="uid://cwfw0xenvtre1" path="res://art/itens/posters_1.png" id="2_1302t"]

[node name="Posters" type="Area2D"]
script = ExtResource("1_6wd3v")

[node name="Posters1" type="Sprite2D" parent="."]
position = Vector2(1318, 305)
texture = ExtResource("2_1302t")

[node name="CollisionPoster1" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(1009, 379, 1172, 478, 1310, 262, 1128, 164)

[node name="CollisionPoster2" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(1294, 187, 1343, 435, 1601, 426, 1542, 172)

[connection signal="input_event" from="." to="." method="_on_input_event"]
